# ssbh_lib

ssbh_data/: Cargo.toml
ssbh_data/src/: hlpb_data.rs  meshex_data.rs  shdr_data.rs
ssbh_data/src/anim_data/: buffers.rs
ssbh_data/src/mesh_data/: mesh_attributes.rs
ssbh_lib/: Cargo.toml
ssbh_lib/fuzz/: Cargo.toml
ssbh_lib/src/: arrays.rs  lib.rs
ssbh_lib/src/formats/: mesh.rs  meshex.rs
ssbh_write_derive/: Cargo.toml
ssbh_write_derive/src/: lib.rs
