[package]
name = "ssbh_data"
version = "0.19.0"
authors = ["ScanMountGoat <>"]
description = "High level data access layer for SSBH formats"
license = "MIT"
documentation = "https://docs.rs/ssbh_data"
repository = "https://github.com/ultimate-research/ssbh_lib"
edition = "2021"

[dependencies]
ssbh_lib = { version = "^0.19", path = "../ssbh_lib", default-features = false }
ssbh_write = { version = "^0.19", path = "../ssbh_write" }
binrw = "0.15.0"
half = "2.1.0"
geometry_tools = { git = "https://github.com/ScanMountGoat/geometry_tools", rev = "d3d4d4a" }
itertools = "0.14"
glam = "0.30.5"
bitvec = "1.0"
modular-bitfield = "0.12.0"
thiserror = "2.0"
ahash = "0.8.8"
serde = { version = "1.0", features = ["derive"], optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5.1"
hexlit = "0.5.5"
hex = "0.4.3"
pretty_assertions = "1.4.0"

[features]
arbitrary = ["dep:arbitrary", "ssbh_lib/arbitrary"]
serde = ["dep:serde", "ssbh_lib/serde", "ssbh_lib/serde_bytes"]
strum = ["dep:strum", "ssbh_lib/strum"]
